Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18596

ll_lock_cancel_bits()) ### data mismatch with object

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      [22397.570452] LustreError: 2266430:0:(namei.c:265:ll_lock_cancel_bits()) ### data mismatch with object [0x2c00032e8:0x2104:0x0](0000000098f6eb7c) ns: lustre-MDT0000-mdc-ffff96712540f000 lock: 00000000764fc488/0xea7c02887bc47bce lrc: 3/0,0 mode: PW/PW res: [0x20000a041:0x4257:0x0].0x0 bits 0xa/0xa rrc: 2 type: IBT gid 0 flags: 0x409400000000 nid: local remote: 0x81c207e08fa0681b expref: -99 pid: 2266430 timeout: 0 lvb_type: 3
      [22397.580414] LustreError: 2266430:0:(namei.c:266:ll_lock_cancel_bits()) LBUG
      [22397.581617] CPU: 0 PID: 2266430 Comm: ldlm_bl_05 4.18.0-477.27.1.el8_8.x86_64 #1
      [22397.583635] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [22397.584616] Call Trace:
      [22397.585124]  dump_stack+0x41/0x60
      [22397.585771]  lbug_with_loc.cold.8+0x5/0x58 [libcfs]
      [22397.586733]  ll_lock_cancel_bits+0xa0/0x910 [lustre]
      [22397.589879]  ll_md_blocking_ast+0x289/0x3e0 [lustre]
      [22397.590779]  ldlm_cancel_callback+0x7b/0x250 [ptlrpc]
      [22397.591731]  ldlm_cli_cancel_local+0xcb/0x430 [ptlrpc]
      [22397.592675]  ldlm_cli_cancel+0xbe/0x5c0 [ptlrpc]
      [22397.593535]  ll_md_blocking_ast+0x2c8/0x3e0 [lustre]
      [22397.594432]  ldlm_handle_bl_callback+0xc5/0x3e0 [ptlrpc]
      [22397.595404]  ldlm_bl_thread_main+0x598/0x900 [ptlrpc]
      [22397.597987]  kthread+0x134/0x150 

      It failed several times in a branch based on b2_14. Investigating the issue I found a piece of code that might be the root cause of the problem. This should be fixed in master also.

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: