LU-18596 ldlm: avoid LBUG in ll_lock_cancel_bits

Check that resource and appropriate inode FIDs are
equivalent under ldlm_lock and resource locks in
ll_inode_resrouce_from_lock. While it was in
ll_lock_cancel_bits it might cause following panic:

 ll_lock_cancel_bits()) ### data mismatch with object
 ll_lock_cancel_bits()) LBUG

Signed-off-by: Sergey Cheremencev <scherementsev@ddn.com>
Change-Id: Ifb75b0ed32062f24c67503548cf2e321ebbc9759
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/57577
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Patrick Farrell <pfarrell@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>